--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ yolov8/uploads/*
 sam/uploads/*
 free_solo_det_fast_rcnn/uploads/*
 free_solo_seg_mrcnn/uploads/*
+CA_Net/uploads/*
+detr/uploads/*
+uploads/*
+SAHI/uploads/*
